# issuer

./: .gitignore  CONTRIBUTING.md  README.md  build.py  data.db  main.py  package-lock.json  package.json  pyproject.toml  ruff.toml  test-directive.js  test-linkify.mjs  test-render.mjs  test-url.js  test-url.tsx  test_exitcode.ps1
.claude/: settings.json  settings.local.json
.github/workflows/: build_and_test.yml  ci.yml
app/: app_main.py  config.py  db.py  ui_helpers.py  ui_state.py
app/database/: connection.py  schema.py
app/database/repositories/: comments.py  issues.py  labels.py  milestones.py
app/domain/: filters.py  models.py  reactions.py
app/services/: filter_service.py  issue_service.py  milestone_service.py
app/ui/: actions.py  helpers.py  state.py  views.py
app/ui/components/: comment_form.py  issue_card.py  milestone_banner.py
app/utils/: attachments.py  linkify.py  lock.py  outlook.py  time.py
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  debug_log.rs  lib.rs  lock.rs  main.rs  relaunch.rs  settings.rs  sync.rs
src-tauri/src/commands/: attachments.rs  comments.rs  issues.rs  labels.rs  milestones.rs  mod.rs  outlook.rs  reactions.rs  themes.rs
src/components/: Dashboard.tsx  Editor.tsx  IssueDetail.tsx  IssueList.tsx  MarkdownCheatSheet.tsx  MarkdownView.tsx  MilestoneProgress.tsx  NewIssue.tsx  ReactionBar.tsx  Settings.tsx  ThemeSelector.tsx
src/components/widgets/: AssigneeWorkload.tsx  (+8 more)
src/lib/: api.ts  theme.ts
src/types/: index.ts
